// Copyright 2026 Yellowbrick Data, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package ai.floedb.floecat.catalog;

option java_multiple_files = true;
option java_package = "ai.floedb.floecat.catalog.rpc";

import "floecat/common/common.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";

// ----- Table -----

enum TableFormat {
  TF_UNSPECIFIED = 0;
  TF_ICEBERG = 1;
  TF_DELTA = 2;
  TF_UNKNOWN = 10;
}

message UpstreamRef {
  optional ai.floedb.floecat.common.ResourceId connector_id = 1;
  string uri = 2;
  repeated string namespace_path = 3;
  string table_display_name = 4;
  TableFormat format = 5;
  repeated string partition_keys = 6;
  map<string,int32> field_id_by_path = 10;
}

message Table {
  ai.floedb.floecat.common.ResourceId resource_id = 1;
  string display_name = 2;
  optional string description = 3;
  ai.floedb.floecat.common.ResourceId catalog_id = 4;
  ai.floedb.floecat.common.ResourceId namespace_id = 5;
  google.protobuf.Timestamp created_at = 6;
  string schema_json = 7;
  UpstreamRef upstream = 8;
  map<string,string> properties = 99;
}

message ListTablesRequest {
  ai.floedb.floecat.common.ResourceId namespace_id = 1;
  ai.floedb.floecat.common.PageRequest page = 2;
}
message ListTablesResponse {
  repeated Table tables = 1;
  ai.floedb.floecat.common.PageResponse page = 2;
}

message GetTableRequest {
  ai.floedb.floecat.common.ResourceId table_id = 1;
  optional ai.floedb.floecat.common.SnapshotRef snapshot = 2;
}
message GetTableResponse {
  Table table = 1;
}

message TableSpec {
  ai.floedb.floecat.common.ResourceId catalog_id = 1;
  ai.floedb.floecat.common.ResourceId namespace_id = 2;
  optional string display_name = 3;
  optional string description = 4;
  optional string schema_json = 5;
  UpstreamRef upstream = 6;
  map<string,string> properties = 99;
}

message CreateTableRequest {
  TableSpec spec = 1;
  ai.floedb.floecat.common.IdempotencyKey idempotency = 2;
}
message CreateTableResponse {
  Table table = 1;
  ai.floedb.floecat.common.MutationMeta meta = 2;
}

message UpdateTableRequest {
  ai.floedb.floecat.common.ResourceId table_id = 1;
  TableSpec spec = 2;
  ai.floedb.floecat.common.Precondition precondition = 3;
  google.protobuf.FieldMask update_mask = 4;
}
message UpdateTableResponse {
  Table table = 1;
  ai.floedb.floecat.common.MutationMeta meta = 2;
}

message DeleteTableRequest {
  ai.floedb.floecat.common.ResourceId table_id = 1;
  bool purge_stats = 2;
  bool purge_snapshots = 3;
  ai.floedb.floecat.common.Precondition precondition = 4;
}
message DeleteTableResponse {
  ai.floedb.floecat.common.MutationMeta meta = 1;
}

// ----- Services -----

service TableService {
  rpc ListTables(ListTablesRequest) returns (ListTablesResponse);
  rpc GetTable(GetTableRequest) returns (GetTableResponse);
  rpc CreateTable(CreateTableRequest) returns (CreateTableResponse);
  rpc UpdateTable(UpdateTableRequest) returns (UpdateTableResponse);
  rpc DeleteTable(DeleteTableRequest) returns (DeleteTableResponse);
}
